--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 body{
           font-family: "Raleway", sans-serif;
           font-optical-sizing: auto;
+          font-weight: <weight>;
           font-style: normal;
 
 }
@@ -25,10 +26,11 @@ body{
         border: none;
 }
 .primary-inter-text{
-          color: #4E47FF; */
-          font-family: "Inter", sans-serif;
-          font-optical-sizing: auto;
-          font-style: normal;
+        color: #4E47FF;
+        font-family: "Inter", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: <weight>;
+        font-style: normal;
 }
 .primary-color{
         color: #252432;
