--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,10 @@ body{
         color: white;
         border-radius: 10px;
         border: none;
+        transition: transform 0.3s;
+}
+.primary-btn:hover{
+        transform: scale(1.2);
 }
 .primary-inter-text{
         color: #4E47FF;
@@ -34,6 +38,17 @@ body{
 }
 .primary-color{
         color: #252432;
+}
+.section-title{
+        font-size: 42px;
+        font-weight: bold;
+        color: #252432;
+}
+.section-sub-title{
+        font-size: 24px;
+        font-weight: 400;
+        color: #252432;
+        opacity: 0.5;
 }
 
 /* header styles */
@@ -62,4 +77,53 @@ header{
 .banner-btn{
         margin-top: 35px;
 }
+
+/* main section styles */
+main{
+        width:80%;
+        margin: 0 auto;
+}
+
+
+/* action styles */
+.action{
+        display: flex;
+        margin-top: 115px;
+        justify-content: space-between;
+        align-items: center;
+}
+.action-content{
+        margin: 62px 0;
+}
+.action-img img{
+        width: 400px;
+        height: 325px;
+        border-radius: 48px;
+}
+.action-content p, .action-content button{
+        margin-top:23px ;
+}
+
+/* users section */
+.users{
+        text-align: center;
+        margin-top: 165px;
+        padding: 50px 80px;
+
+}
+.data-container{
+        display: flex;
+        justify-content: space-evenly;
+        margin-top: 40px;
+
+}
+.data-title{
+        font-size: 80px;
+        font-weight: bold;
+}
+.data-sub-title{
+        font-size: 20px;
+}
+
+
 
