--- a/styles/style.css
+++ b/styles/style.css
@@ -109,6 +109,8 @@ main{
         text-align: center;
         margin-top: 165px;
         padding: 50px 80px;
+        background-color:rgb(78, 71, 255,0.1);
+        border-radius: 24px;
 
 }
 .data-container{
